# mafed

./: README.md  pyproject.toml
config/: train-vqa-base-cl-local-vlpythia.json  vlpythia-base.json
mafed/: constants.py  dataloaders.py  pretrain_vlpythia.py  train.py
mafed/analysis/: cka.py  get_average_CKA_per_layer.py  get_representation_CKA_ratio.py
mafed/data/: __init__.py  base_data.py  loader.py  preprocess.py  vl_pythia_pretrain_dataset.py  vl_pythia_vqa_dataset.py  vqa_utils.py
mafed/methods/: __init__.py  base.py  distillation.py  distillation_loss_weights.py  ewc.py  replay.py
mafed/model/: __init__.py  vl_pythia.py  vqa_cont_learner.py
mafed/optim/: __init__.py  adamw.py  sched.py
mafed/trainer/: hf.py
mafed/utils/: boxes.py  checkpoint.py  cl_utils.py  download_models.py  eval_utils.py  logger.py  mcan_ans_prepro.py  misc.py  save.py  vl_pythia.py
scripts/: download_data.sh  run_finetuning.sh  run_seed42.sh
