[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mafed"]

[project]
name = "mafed"
version = "0.1.0"
description = "Modality-Aware Feature Distillation for Continual Learning in VQA"
authors = [
  {name = "Malvina Nikandrou", email = "mn2002@hw.ac.uk"},
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "accelerate==0.28.0",
    "datasets==2.16.1",
    "imagecorruptions==1.1.2",
    "imageio==2.34.0",
    "matplotlib==3.7.0",
    "nltk==3.7",
    "numpy==1.26.4",
    "overrides==6.1.0",
    "pandas==1.5.3",
    "Pillow==9.1.0",
    "pydantic==2.6.4",
    "pytorch-lightning==2.2.2",
    "regex==2022.10.31",
    "rich==13.3.1",
    "safetensors==0.4.2",
    "seaborn==0.12.2",
    "tabulate==0.9.0",
    "timm==0.9.16",
    "tokenizers==0.15.2",
    "toolz==0.11.1",
    "torch==2.2.2",
    "torchmetrics==0.8.2",
    "torchvision==0.17.2",
    "transformers==4.37.1",
    "wandb==0.13.10",
]